<resources>
    <string name="app_name">Ass1</string>
    <string name="choose_movie">Choose Movie</string>
    <string name="new_event_title">Event Title</string>
    <string name="new_event_venue">Venue Name</string>
    <string name="select_start_date">Start Date</string>
    <string name="select_end_date">End Date</string>
    <string name="date_button_desc">Select Date Button</string>
    <string name="location_button_desc">Location Button</string>
    <string name="choose_movie_button_desc">Choose Movie Button</string>
    <string name="add_event_button_desc">Add event button</string>
    <string name="confirm_button">Confirm</string>
    <string name="delete_button">Delete button</string>
    <string name="phone">Phone Number</string>
    <string name="contactName">Contact Name</string>
    <string name="email">E-mail</string>
    <string name="save_button_desc">save button</string>
    <string name="invite_button_desc">invite button</string>
    <string name="going">going</string>
    <string name="num_placeholder">0</string>

    <string name="Event">Event</string>
    <string name="movie_list">Movies</string>
    <string name="event_list">Events</string>
    <string name="contacts">Choose Contacts</string>
    <string name="ascending">ascending</string>
    <string name="descending">descending</string>
    <string name="save_close">Save and Close</string>

    <string name="calendar_view">Calendar View</string>

    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="title_activity_event_location">Map</string>
    <string name="event_locations">location</string>

    <string name="notification_threshold">Notification Threshold</string>
    <string name="notification_period">Notification Period</string>
    <string name="remind_minutes">Remind in n minutes</string>
    <string name="minutes">Minutes</string>
    <string name="threshold_hint">Please enter a number</string>
    <string name="dismiss">Dismiss</string>
    <string name="cancel">Cancel</string>
    <string name="remind">Remind</string>

</resources>
