<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context=".view.AddEditEventActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/event_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/eventNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/event_toolbar"
        tools:layout_editor_absoluteX="0dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/eventName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/new_event_title"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            android:textStyle="bold" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/venueNameLayout"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventNameLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/venueName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:hint="@string/new_event_venue"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/newMovie"
        android:layout_width="192dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif"
        android:paddingStart="2dp"
        android:paddingTop="17dp"
        android:paddingEnd="2dp"
        android:paddingBottom="17dp"
        android:text="@string/choose_movie"
        android:textAlignment="textStart"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/newMovieButton"
        app:layout_constraintTop_toBottomOf="@+id/venueNameLayout" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/startDateLayout"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/startDateButton"
        app:layout_constraintTop_toBottomOf="@+id/newMovie">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/startDate"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/select_start_date"
            android:inputType="datetime"
            android:textAlignment="textStart"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="396dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/endDateLayout"
        android:layout_width="192dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/endDateButton"
        app:layout_constraintTop_toBottomOf="@+id/startDateLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/endDate"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/select_end_date"
            android:inputType="datetime"
            android:textAlignment="textStart"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="431dp" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/endDateButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/date_button_desc"
        android:src="@drawable/ic_date_pick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDateButton" />

    <ImageView
        android:id="@+id/startDateButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/date_button_desc"
        android:src="@drawable/ic_date_pick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newMovieButton" />

    <ImageView
        android:id="@+id/addLocationButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/location_button_desc"
        android:src="@drawable/ic_add_location"
        app:layout_constraintStart_toEndOf="@+id/venueNameLayout"
        app:layout_constraintTop_toBottomOf="@+id/eventNameLayout" />

    <ImageView
        android:id="@+id/newMovieButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/choose_movie_button_desc"
        android:src="@drawable/ic_movie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/venueNameLayout" />

    <TextView
        android:id="@+id/numAttendees"
        android:layout_width="64dp"
        android:layout_height="62dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/num_placeholder"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/newMovie"
        app:layout_constraintTop_toBottomOf="@+id/addLocationButton" />

    <TextView
        android:id="@+id/goingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/going"
        app:layout_constraintStart_toEndOf="@+id/startDateLayout"
        app:layout_constraintTop_toBottomOf="@+id/numAttendees" />

    <ImageView
        android:id="@+id/inviteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/invite_button_desc"
        android:src="@drawable/ic_invite_people"
        app:layout_constraintStart_toEndOf="@+id/endDateLayout"
        app:layout_constraintTop_toBottomOf="@+id/goingLabel" />

    <FrameLayout
        android:id="@+id/fragment_frame"
        android:layout_width="408dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

    </FrameLayout>


</android.support.constraint.ConstraintLayout>